crates/sui-graphql-macros/tests/compile/schema_validation_field_after_list_suggestion.stderr
error: Field 'digst' not found on type 'Checkpoint'. Did you mean 'digest'?
 --> tests/compile/schema_validation_field_after_list_suggestion.rs:7:20
  |
7 |     #[field(path = "checkpoints.nodes[].digst")]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
